add checkout view created

--- a/resources/templates/core/checkout.html
+++ b/resources/templates/core/checkout.html
@@ -1,7 +1,7 @@
 {% extends 'layout/main.layout.html' %}
 {% load static %}
 
-{% block title %} Cart | ShopSwift {% endblock title %}
+{% block title %} Checkout | ShopSwift {% endblock title %}
 
 {% block main %}
 <section>
